--- a/Samples/SimpleDemo/res/layout/update_profile_activity.xml
+++ b/Samples/SimpleDemo/res/layout/update_profile_activity.xml
@@ -276,8 +276,9 @@
                 android:layout_columnSpan="2"
                 android:layout_gravity="left"
                 android:ems="10"
+                android:enabled="false"
                 android:imeOptions="actionNext"
-                android:text="Opt In" />
+                android:text="Receive emails and other communications." />
 
             <!-- ABOUT -->
             <TextView
