--- a/Samples/SimpleDemoNative/res/layout/update_profile_activity.xml
+++ b/Samples/SimpleDemoNative/res/layout/update_profile_activity.xml
@@ -1,112 +1,329 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dip"
-        android:useDefaultMargins="true"
-        android:alignmentMode="alignBounds"
-        android:columnOrderPreserved="false"
-        android:columnCount="2"
-        android:id="@+id/gridLayout"
-        android:layout_row="0"
-        android:layout_column="0">
+        android:orientation="vertical">
 
-        <TextView
-            android:text="Email:"
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/gridLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_column="0"
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_row="0"
+            android:alignmentMode="alignBounds"
+            android:columnCount="2"
+            android:columnOrderPreserved="false"
+            android:padding="8dip"
+            android:useDefaultMargins="true">
 
-        <EditText
-            android:id="@+id/update_profile_email"
-            android:ems="10"
-            android:inputType="textEmailAddress"
-            android:imeOptions="actionNext"
-            android:layout_gravity="left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <!-- EMAIL -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Email:"
+                android:focusableInTouchMode="true"
+                android:focusable="true"/>
 
-        <TextView
-            android:text="Display Name:"
-            android:layout_column="0"
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/update_profile_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress" />
 
-        <EditText
-            android:id="@+id/update_profile_display_name"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:imeOptions="actionNext"
-            android:layout_gravity="left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <!-- DISPLAY NAME -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Display Name:" />
 
-        <TextView
-            android:text="First Name:"
-            android:layout_column="0"
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/update_profile_display_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/update_profile_first_name"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:imeOptions="actionNext"
-            android:layout_gravity="left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <!-- FIRST NAME -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="First Name:" />
 
-        <TextView
-            android:text="Last Name:"
-            android:layout_column="0"
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/update_profile_first_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/update_profile_last_name"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:imeOptions="actionNext"
-            android:layout_gravity="left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <!-- MIDDLE NAME -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Middle Name:" />
 
-        <TextView
-            android:text="About:"
-            android:layout_column="0"
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/update_profile_middle_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/update_profile_about"
-            android:ems="10"
-            android:lines="3"
-            android:inputType="textCapSentences|textMultiLine"
-            android:imeOptions="actionNext"
-            android:layout_gravity="left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <!-- LAST NAME -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Last Name:" />
+
+            <EditText
+                android:id="@+id/update_profile_last_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName" />
+
+            <!-- GENDER -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Gender:" />
+
+            <Spinner
+                android:id="@+id/update_profile_gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName" />
+
+            <!-- BIRTHDATE -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Birth Date:" />
+
+            <Button
+                android:id="@+id/update_profile_birthdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext" />
+
+            <!-- PHONE -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Phone:" />
+
+            <EditText
+                android:id="@+id/update_profile_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="phone" />
+
+            <!-- MOBILE -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Mobile Phone:" />
+
+            <EditText
+                android:id="@+id/update_profile_mobile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="phone" />
+
+            <!-- ADDRESS HEADER -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="2"
+                android:background="#FFCDCDCD"
+                android:padding="10dp"
+                android:text="Address" />
+
+            <!-- ADDRESS STREET 1 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Street 1:" />
+
+            <EditText
+                android:id="@+id/update_profile_addressStreet1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="text" />
+
+            <!-- ADDRESS STREET 1 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Street 2:" />
+
+            <EditText
+                android:id="@+id/update_profile_addressStreet2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="text" />
+
+            <!-- ADDRESS CITY -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="City:" />
+
+            <EditText
+                android:id="@+id/update_profile_addressCity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="text" />
+
+            <!-- ADDRESS STATE -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="State:" />
+
+            <Spinner
+                android:id="@+id/update_profile_addressState"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext" />
+
+            <!-- ADDRESS COUNTRY -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Country:" />
+
+            <Spinner
+                android:id="@+id/update_profile_addressCountry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext" />
+
+            <!-- ADDRESS POSTAL CODE -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="Postal Code:" />
+
+            <EditText
+                android:id="@+id/update_profile_addressPostalCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="textPostalAddress" />
+
+            <!-- OPT IN -->
+            <CheckBox
+                android:id="@+id/update_profile_optIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="2"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:enabled="false"
+                android:imeOptions="actionNext"
+                android:text="Receive emails and other communications." />
+
+            <!-- ABOUT -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_gravity="right"
+                android:text="About:" />
+
+            <EditText
+                android:id="@+id/update_profile_about"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:ems="10"
+                android:imeOptions="actionNext"
+                android:inputType="textCapSentences|textMultiLine"
+                android:lines="3" />
 
 
-        <Button
-            android:id="@+id/update_profile_button"
-            android:text="Update"
-            android:onClick="update"
-            android:layout_gravity="center_horizontal"
-            android:layout_columnSpan="2"
-            android:layout_column="0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/update_profile_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_columnSpan="2"
+                android:layout_gravity="center_horizontal"
+                android:onClick="update"
+                android:text="Update" />
+        </GridLayout>
     </GridLayout>
-</GridLayout>
+</ScrollView>
