MOB-389 Fix wrong labels in registration and profile update screens.

--- a/Samples/SimpleDemo/res/layout/update_profile_activity.xml
+++ b/Samples/SimpleDemo/res/layout/update_profile_activity.xml
@@ -131,7 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_column="0"
                 android:layout_gravity="right"
-                android:text="Gender:" />
+                android:text="Birth Date:" />
 
             <Button
                 android:id="@+id/update_profile_birthdate"
