--- a/Samples/SimpleDemo/res/layout/registration_activity.xml
+++ b/Samples/SimpleDemo/res/layout/registration_activity.xml
@@ -133,7 +133,7 @@
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_gravity="right"
-            android:text="Gender:" />
+            android:text="Birth Date:" />
 
         <Button
             android:id="@+id/trad_reg_birthdate"
