--- a/Jump/src/main/res/values/styles.xml
+++ b/Jump/src/main/res/values/styles.xml
@@ -37,7 +37,7 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
-    <style name="jr_progress_dialog_style" parent="@android:Theme.Dialog">
+    <style name="jr_progress_dialog_style" parent="@android:style/Theme.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
