--- a/Samples/SimpleDemo/res/layout/registration_activity.xml
+++ b/Samples/SimpleDemo/res/layout/registration_activity.xml
@@ -33,6 +33,7 @@
   -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -298,6 +299,7 @@
             android:text="Receive emails and other communications." />
 
         <TextView
+            android:id="@+id/trad_reg_password_label"
             android:layout_column="0"
             android:layout_gravity="right"
             android:text="Password:" />
@@ -310,6 +312,7 @@
             android:inputType="textVisiblePassword" />
 
         <TextView
+            android:id="@+id/trad_reg_password_confirm_label"
             android:layout_column="0"
             android:layout_gravity="right"
             android:text="Confirm:" />
